Se añadio formulario de registro

--- a/index.html
+++ b/index.html
@@ -9,5 +9,15 @@
 
 	Bienvenido a la app Desarrollo Rápido
 
+	<form>
+		<label>Ingresa Usuario</label>
+		<input type="text" name="user">
+		<label>Ingresa Contraseña</label>
+		<input type="password" name="pass">
+		<label>Ingresa correo Electrónico</label>
+		<input type="email" name="correo">
+		<input type="submit" name="enviar" value="Aceptar">
+	</form>
+
 </body>
 </html>
