--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 		<input type="password" name="pass">
 		<label>Ingresa correo Electrónico</label>
 		<input type="email" name="correo">
-		<input type="submit" name="enviar" value="Aceptar">
+		<input type="submit" name="enviar" value="GUARDAR">
 	</form>
 
 </body>
