Se añadieron nuevas funcionalidades

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 	Bienvenido a la app Desarrollo Rápido
 
 	<form>
-		<label>Ingresa Usuario</label>
+		<label>Ingresa Usuario POR FAVOR</label>
 		<input type="text" name="user">
 		<label>Ingresa Contraseña</label>
 		<input type="password" name="pass">
