se agregó la imagen de la empresa

--- a/index.html
+++ b/index.html
@@ -4,10 +4,14 @@
 	<title>Bienvenido usuario</title>
 </head>
 <body>
-
+	<p align="center">
 	Hola como estas ?
-
-	Bienvenido a la app Desarrollo Rápido
+	Bienvenido a la app Desarrollo Rápido	
+	<br>	
+	<img src="cobaezsss.png" width="150" height="150">
+	</p>
+	
+	
 
 	<form>
 		<label>Ingresa Usuario POR FAVOR</label>
